27-10-2025/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: simple-api
        image: kishorek003/simple-api:latest   
        ports:
        - containerPort: 3000
