27-10-2025/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
spec:
  selector:
    app: simple-api
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
